<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_centerHorizontal="true">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_gravity="center"
                    android:text="@string/Tai_khoan"
                    android:textColor="@color/Nen"
                    android:textSize="20dp" />


            </RelativeLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="7dp"
                android:background="@drawable/gradient">

            </TextView>
        </LinearLayout>
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="@dimen/_110sdp"
                android:background="#7FC241"
                android:src="@drawable/logo_foodhouse2" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/_5sdp"
                android:layout_marginRight="@dimen/_5sdp"
                android:orientation="vertical">

                <ImageButton
                    android:id="@+id/btnEditUser"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:src="@drawable/ic_baseline_edit_24" />

                <RelativeLayout
                    android:layout_width="@dimen/_80sdp"
                    android:layout_height="@dimen/_80sdp"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/_30sdp"
                    android:background="@drawable/vien_avt">

                    <ImageButton
                        android:background="@drawable/vien_avt"
                        android:id="@+id/img_Avatar"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:scaleType="fitXY" />
                </RelativeLayout>

                <TextView
                    android:id="@+id/tv_Username"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="User name"
                    android:textSize="@dimen/_12sdp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_marginTop="@dimen/_10sdp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/so_dien_thoai"
                        android:textSize="@dimen/_12sdp" />

                    <TextView
                        android:id="@+id/tv_PhoneNumber"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/_5sdp"
                        android:textSize="@dimen/_12sdp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_marginTop="@dimen/_10sdp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:text="@string/email"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/_12sdp" />

                    <TextView
                        android:id="@+id/tv_Email"
                        android:layout_marginLeft="@dimen/_5sdp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/_12sdp" />
                </LinearLayout>


                <LinearLayout
                    android:layout_marginTop="@dimen/_10sdp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/diem_tich_luy"
                        android:textSize="@dimen/_12sdp" />
                    <TextView
                        android:id="@+id/tv_Scores"
                        android:layout_marginLeft="@dimen/_5sdp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/_12sdp" />

                </LinearLayout>
                <TextView
                    android:id="@+id/tv_History"
                    android:layout_width="match_parent"

                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:padding="@dimen/_2sdp"
                    android:text="@string/lich_su_dat_cho"
                    android:textSize="@dimen/_12sdp" />





                <TextView
                    android:id="@+id/tv_Helper"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:padding="@dimen/_2sdp"
                    android:text="@string/trung_tam_tro_giup"
                    android:textSize="@dimen/_12sdp" />

                <TextView
                    android:id="@+id/tv_Setting"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:padding="@dimen/_2sdp"
                    android:text="@string/cai_dat_ung_dung"
                    android:textSize="@dimen/_12sdp" />
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                <Button
                    android:id="@+id/btn_LogOut"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:backgroundTint="@color/Gray"
                    android:text="@string/dang_xuat"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_12sdp" />
                    <Button
                        android:id="@+id/btn_Login"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:backgroundTint="@color/Gray"
                        android:text="Đăng nhập"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_12sdp" />

                </RelativeLayout>
                <Button
                    android:id="@+id/btn_DangKi"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:backgroundTint="@color/Gray"
                    android:text="@string/dang_ki"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_12sdp" />
            </LinearLayout>
        </RelativeLayout>
    </LinearLayout>

</layout>