<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RelativeLayout
                android:id="@+id/rl1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/vienduoi"
                android:orientation="vertical">

                <ImageButton
                    android:id="@+id/btn_BackOder"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="#0090DC46"
                    android:src="@drawable/ic_baseline_arrow_back_24" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_centerHorizontal="true"
                    android:text="@string/order"
                    android:textColor="@color/Nen"
                    android:textSize="@dimen/_16sdp" />
            </RelativeLayout>

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/rl1">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"

                    android:layout_marginBottom="@dimen/_5sdp"
                    android:orientation="vertical">

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rl_Top_Oder"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:drawableRight="@drawable/placeholder"
                        android:id="@+id/tv_TitleOder"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_5sdp"
                        android:layout_marginLeft="@dimen/_5sdp"
                        android:layout_marginRight="@dimen/_5sdp"
                        android:lines="2"
                        android:maxLines="2"
                        android:text="Food House: Lẩu lướng 332Linh Nam Hoang Mai Hn"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_16sdp" />


                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/_5sdp"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:layout_marginRight="@dimen/_5sdp">

                        <TextView
                            android:id="@+id/tv_Cuahang"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentLeft="true"
                            android:text="@string/Chon_cua_hang"
                            android:textSize="@dimen/_12sdp" />

                        <TextView
                            android:id="@+id/tv_Soluomg"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentRight="true"
                            android:text="@string/So_luong_suat"
                            android:textSize="@dimen/_12sdp" />

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/tv_Cuahang"
                            android:background="@drawable/vien_vuong">

                            <Spinner
                                android:id="@+id/Sp_Cuahang"
                                android:layout_width="@dimen/_160sdp"
                                android:layout_height="@dimen/_16sdp" />
                        </LinearLayout>


                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/tv_Soluomg"
                            android:layout_alignParentRight="true"
                            android:background="@drawable/vien_vuong">

                            <Spinner
                                android:id="@+id/Sp_Soluong"
                                android:layout_width="@dimen/_80sdp"
                                android:layout_height="@dimen/_16sdp" />
                        </LinearLayout>

                    </RelativeLayout>


                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/_5sdp"
                        android:layout_marginTop="@dimen/_15sdp"
                        android:layout_marginRight="@dimen/_5sdp"
                        android:background="@drawable/vien_vuong">

                        <Spinner
                            android:layout_weight="1"
                            android:id="@+id/Sp_Day"
                            android:layout_width="@dimen/_150sdp"
                            android:layout_height="@dimen/_16sdp"
                            android:layout_marginLeft="@dimen/_5sdp"
                            android:layout_marginRight="@dimen/_5sdp" />
                    </LinearLayout>

                    <androidx.cardview.widget.CardView
                        android:layout_marginTop="@dimen/_5sdp"
                        android:layout_marginBottom="@dimen/_5sdp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <androidx.recyclerview.widget.RecyclerView
                            android:id="@+id/rl_Time"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />
                    </androidx.cardview.widget.CardView>


                    <EditText
                        android:id="@+id/et_Note"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/_5sdp"
                        android:layout_marginTop="@dimen/_20sdp"
                        android:hint="Ghi chú"
                        android:lines="1"
                        android:maxLength="50"
                        android:maxLines="2"
                        android:textSize="@dimen/_14sdp" />

                    <Button
                        android:id="@+id/btn_OderOke"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:backgroundTint="@color/Nen"
                        android:text="@string/Dat_cho"
                        android:textColor="@color/white" />

                </LinearLayout>
            </ScrollView>
        </RelativeLayout>
    </ScrollView>

</layout>