<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_centerHorizontal="true"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:layout_gravity="center"
                        android:text="@string/dang_ki"
                        android:textSize="20dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_centerInParent="true"
                        android:layout_gravity="center"
                        android:layout_marginRight="10dp"
                        android:text="Trợ giúp"
                        android:textSize="16dp" />

                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="30dp"
                        android:layout_alignParentLeft="true"
                        android:layout_centerInParent="true"
                        android:layout_marginRight="10dp"
                        android:src="@drawable/ic_baseline_arrow_back_24" />
                </RelativeLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="7dp"
                    android:background="@drawable/gradient">

                </TextView>
            </LinearLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <RelativeLayout
                    android:layout_marginTop="@dimen/_100sdp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_centerInParent="true">
                    <RelativeLayout
                        android:id="@+id/rl6"
                        android:layout_centerHorizontal="true"
                        android:layout_width="@dimen/_80sdp"
                        android:layout_height="@dimen/_80sdp"
                        android:layout_gravity="center"
                        android:background="@drawable/vien_avt">

                        <ImageButton
                            android:background="@drawable/vien_avt"
                            android:id="@+id/imgAvt"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerInParent="true"
                            android:scaleType="fitXY" />
                    </RelativeLayout>


                    <RelativeLayout
                        android:layout_marginTop="40dp"
                        android:layout_below="@id/rl6"
                        android:layout_width="match_parent"
                        android:layout_height="400dp"
                        android:layout_centerInParent="true">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_centerHorizontal="true"
                            android:layout_marginLeft="25dp"
                            android:layout_marginRight="25dp"
                            android:orientation="vertical">
                            <RelativeLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content">
                                <EditText
                                    android:id="@+id/etPhone"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:drawableLeft="@drawable/ic_baseline_person_outline_24"
                                    android:hint="@string/so_dien_thoai"
                                    android:inputType="phone"
                                    android:lines="1"
                                    android:maxLength="12"
                                    android:maxLines="1"
                                    android:textSize="16dp" />

                                <ImageView
                                    android:id="@+id/imgErrorSdt"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_alignParentRight="true"
                                    android:layout_centerHorizontal="true"
                                    android:layout_marginRight="0dp"
                                    android:src="@drawable/ic_cancel"
                                    android:visibility="invisible" />
                            </RelativeLayout>
                            <TextView
                                android:id="@+id/tvErrorPhone"
                                android:textSize="10dp"
                                android:lines="1"
                                android:maxLines="1"
                                android:textColor="@color/Red"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"/>
                            <RelativeLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content">
                                <EditText
                                    android:id="@+id/etEmail"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:drawableLeft="@drawable/ic_baseline_person_outline_24"
                                    android:hint="@string/email"
                                    android:inputType="textEmailAddress"
                                    android:lines="1"
                                    android:maxLength="30"
                                    android:maxLines="1"
                                    android:paddingRight="25dp"
                                    android:textSize="16dp" />

                                <ImageView
                                    android:id="@+id/imgErrorEmail"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_alignParentRight="true"
                                    android:layout_centerInParent="true"
                                    android:layout_marginRight="0dp"
                                    android:src="@drawable/ic_cancel"
                                    android:visibility="invisible" />

                            </RelativeLayout>
                            <TextView
                                android:id="@+id/tvErrorEmail"
                                android:textSize="10dp"
                                android:lines="1"
                                android:maxLines="1"
                                android:textColor="@color/Red"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"/>
                            <RelativeLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content">

                                <EditText
                                    android:id="@+id/etUser"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:drawableLeft="@drawable/ic_baseline_person_outline_24"
                                    android:hint="@string/username"
                                    android:inputType="textEmailAddress"
                                    android:lines="1"
                                    android:maxLength="16"
                                    android:maxLines="1"
                                    android:paddingRight="25dp"
                                    android:textSize="16dp" />

                                <ImageView
                                    android:visibility="invisible"
                                    android:id="@+id/imgErrorUsername"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_alignParentRight="true"
                                    android:layout_centerInParent="true"
                                    android:layout_marginRight="0dp"
                                    android:src="@drawable/ic_cancel" />

                            </RelativeLayout>
                            <TextView
                                android:id="@+id/tvErrorUsername"
                                android:textSize="10dp"
                                android:lines="1"
                                android:maxLines="1"
                                android:textColor="@color/Red"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"/>

                            <RelativeLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content">

                                <EditText
                                    android:id="@+id/etPass"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:drawableLeft="@drawable/ic_baseline_lock_24"
                                    android:hint="Mật khẩu hiện tại"
                                    android:inputType="textPassword"
                                    android:lines="1"
                                    android:maxLength="16"
                                    android:maxLines="1"
                                    android:textSize="14dp" />

                                <ImageView
                                    android:visibility="invisible"
                                    android:id="@+id/imgErrorPass1"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_alignParentRight="true"
                                    android:layout_centerInParent="true"
                                    android:layout_marginRight="0dp"
                                    android:src="@drawable/ic_cancel" />
                            </RelativeLayout>
                            <TextView
                                android:id="@+id/tvErrorPass"
                                android:textSize="7dp"
                                android:lines="2"
                                android:maxLines="2"
                                android:textColor="@color/Red"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"/>
                            <RelativeLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content">


                                <EditText

                                    android:id="@+id/etPass2"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:drawableLeft="@drawable/ic_baseline_lock_24"
                                    android:hint="Mật khẩu mới"
                                    android:inputType="textPassword"
                                    android:lines="1"
                                    android:maxLength="16"
                                    android:maxLines="1"
                                    android:textSize="14dp" />
                                <ImageView
                                    android:visibility="invisible"
                                    android:id="@+id/imgErrorPass2"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_alignParentRight="true"
                                    android:layout_centerInParent="true"
                                    android:layout_marginRight="0dp"
                                    android:src="@drawable/ic_cancel" />
                            </RelativeLayout>
                            <TextView
                                android:id="@+id/tvErrorPass2"
                                android:textSize="10dp"
                                android:lines="1"
                                android:maxLines="1"
                                android:textColor="@color/Red"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"/>

                            <Button
                                android:id="@+id/btnDangNhap"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/dang_ki"
                                android:textAllCaps="false"
                                android:textColor="@color/Nen"
                                android:textSize="16dp"
                                android:textStyle="normal" />


                        </LinearLayout>
                    </RelativeLayout>


                </RelativeLayout>
            </RelativeLayout>
        </LinearLayout>
    </ScrollView>

</layout>